# ComfyUI-LBM

./: LBM_DepthNormal.py  LBM_Relighting.py  README.md  __init__.py  pyproject.toml  requirements.txt  update.md
example_workflows/: LBM-RElighting.json  LBM_Depth&Normal.json
lbm/: config.py
lbm/models/: utils.py
lbm/models/base/: __init__.py  base_model.py  model_config.py
lbm/models/embedders/: __init__.py  conditioners_wrapper.py
lbm/models/embedders/base/: __init__.py  base_conditioner.py  base_conditioner_config.py
lbm/models/embedders/latents_concat/: __init__.py  latents_concat_embedder_config.py  latents_concat_embedder_model.py
lbm/models/lbm/: __init__.py  lbm_config.py  lbm_model.py
lbm/models/unets/: __init__.py  unet.py
lbm/models/vae/: __init__.py  autoencoderKL.py  autoencoderKL_config.py
